Add 1st section with text and image

--- a/index.html
+++ b/index.html
@@ -26,5 +26,15 @@
             </ul>
         </nav>
     </header>
+    <main style="border: 2px solid;">
+        <div style="border: 2px solid;">
+            <p>
+                THIS WEBSITE IS AWESOME<br>
+                Insert extra text here
+            </p>
+            <img src="./../../odin-links-and-images/images/placeholder-1.jpg" alt="person at laptop" style="height: 100px; width: 100px;">
+        </div>
+
+    </main>
 </body>
 </html>
