Add button to 1st section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <div style="border: 2px solid;">
             <p>
                 THIS WEBSITE IS AWESOME<br>
-                Insert extra text here
+                Insert extra text here<br>
+                <input type="button"></input>
             </p>
             <img src="./../../odin-links-and-images/images/placeholder-1.jpg" alt="person at laptop" style="height: 100px; width: 100px;">
         </div>
