add images to section 2

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </ul>
         </nav>
     </header>
-    <main style="border: 2px solid;">
+    <main>
         <div style="border: 2px solid;">
             <p>
                 THIS WEBSITE IS AWESOME<br>
@@ -35,6 +35,39 @@
             </p>
             <img src="./../../odin-links-and-images/images/placeholder-1.jpg" alt="person at laptop" style="height: 100px; width: 100px;">
         </div>
+        <div style="border: 2px solid;">
+            <p>
+                Text goes here
+            </p>
+            <div id="image-container">
+                <div class="img-with-text">
+                    <img src="./../../odin-links-and-images/images/placeholder-2.jpg" alt="chook" style="height: 100px; width: 100px;"></img>
+                    <p>
+                        cute chook
+                    </p>
+                </div>
+                <div class="img-with-text">
+                    <img src="./../../odin-links-and-images/images/placeholder-2.jpg" alt="chook" style="height: 100px; width: 100px;"></img>
+                    <p>
+                        cute chook
+                    </p>
+                </div>
+                <div class="img-with-text">
+                    <img src="./../../odin-links-and-images/images/placeholder-2.jpg" alt="chook" style="height: 100px; width: 100px;"></img>
+                    <p>
+                        cute chook
+                    </p>
+                </div>
+                <div class="img-with-text">
+                    <img src="./../../odin-links-and-images/images/placeholder-2.jpg" alt="chook" style="height: 100px; width: 100px;"></img>
+                    <p>
+                        cute chook
+                    </p>
+                </div>
+                
+            </div>
+        </div>
+
 
     </main>
 </body>
