Add quote section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
     <main>
-        <div style="border: 2px solid;">
+        <div style="border: 2px solid;" id="first-section">
             <p>
                 THIS WEBSITE IS AWESOME<br>
                 Insert extra text here<br>
@@ -35,7 +35,7 @@
             </p>
             <img src="./../../odin-links-and-images/images/placeholder-1.jpg" alt="person at laptop" style="height: 100px; width: 100px;">
         </div>
-        <div style="border: 2px solid;">
+        <div style="border: 2px solid;" id="second-section">
             <p>
                 Text goes here
             </p>
@@ -66,6 +66,14 @@
                 </div>
                 
             </div>
+        </div>
+        <div id="third-section" style="border: 2px solid;">
+            <blockquote>
+                "This is just a random quote"
+                <p>
+                    -Me
+                </p>
+            </blockquote>
         </div>
 
 
