Add CTA and footer

--- a/index.html
+++ b/index.html
@@ -75,6 +75,20 @@
                 </p>
             </blockquote>
         </div>
+        <div id="cta" style="border: 2px solid;">
+            <div id="cta-container">
+                <p>
+                    CALL TO ACTION<br>
+                    insert some words
+                </p>
+                <input type="button">
+            </div>
+        </div>
+        <footer>
+            <p>
+                Typical footer stuff
+            </p>
+        </footer>
 
 
     </main>
