--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
     <header>
         <nav style="border: 2px solid;">
-            <ul>
-                <li>
+            <ul id="nav-container">
+                <li class="nav">
                     Logo Here
                 </li>
-                <li>
+                <li class="nav">
                     header link 1
                 </li>
-                <li>
+                <li class="nav">
                     header link 2
                 </li>
-                <li>
+                <li class="nav">
                     header link 3
                 </li>
             </ul>
@@ -84,7 +85,7 @@
                 <input type="button">
             </div>
         </div>
-        <footer>
+        <footer style="border: 2px solid;">
             <p>
                 Typical footer stuff
             </p>
