add spacing to navbar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav style="border: 2px solid;">
             <ul id="nav-container">
-                <li class="nav">
+                <li id="nav-logo">
                     Logo Here
                 </li>
                 <li class="nav">
