Add flex and background color

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main>
         <div style="border: 2px solid;" id="first-section">
             <p>
-                THIS WEBSITE IS AWESOME<br>
+                <span id="hero-main-text">WEBSITE IS AWESOME</span><br>
                 Insert extra text here<br>
                 <input type="button"></input>
             </p>
