Add styling to first section text

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
         <div style="border: 2px solid;" id="first-section">
             <p>
                 <span id="hero-main-text">WEBSITE IS AWESOME</span><br>
-                Insert extra text here<br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Sed felis urna, <br> 
+                eu velit ut, ultrices malesuada dui. Interdum et malesuada fames ac ante ipsum primis in faucibus.<br>
                 <input type="button"></input>
             </p>
             <img src="./../../odin-links-and-images/images/placeholder-1.jpg" alt="person at laptop" style="height: 100px; width: 100px;">
