Add align center and text changes to first section

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         <div style="border: 2px solid;" id="first-section">
             <p>
                 <span id="hero-main-text">WEBSITE IS AWESOME</span><br>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                <span id="hero-body-text">ipsum dolor sit amet, consectetur adipiscing elit.
                 Sed felis urna, <br> 
-                eu velit ut, ultrices malesuada dui. Interdum et malesuada fames ac ante ipsum primis in faucibus.<br>
+                eu velit ut, ultrices malesuada dui. Interdum et malesuada fames ac ante ipsum primis in faucibus.</span><br>
                 <input type="button"></input>
             </p>
-            <img src="./../../odin-links-and-images/images/placeholder-1.jpg" alt="person at laptop" style="height: 100px; width: 100px;">
+            <img id="main-image" src="./../../odin-links-and-images/images/placeholder-1.jpg" alt="person at laptop">
         </div>
         <div style="border: 2px solid;" id="second-section">
             <p>
