--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <span id="hero-body-text">ipsum dolor sit amet, consectetur adipiscing elit.
                 Sed felis urna, <br> 
                 eu velit ut, ultrices malesuada dui. Interdum et malesuada fames ac ante ipsum primis in faucibus.</span><br>
-                <input type="button"></input>
+                <button id="hero-button" type="button">Sign Up</button>
             </p>
             <img id="main-image" src="./../../odin-links-and-images/images/placeholder-1.jpg" alt="person at laptop">
         </div>
