Add second section header styles

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             <img id="main-image" src="./../../odin-links-and-images/images/placeholder-1.jpg" alt="person at laptop">
         </div>
         <div style="border: 2px solid;" id="second-section">
-            <p>
-                Text goes here
-            </p>
+            <h2 id="second-section-header">
+                Some Random Text
+            </h2>
             <div id="image-container">
                 <div class="img-with-text">
                     <img src="./../../odin-links-and-images/images/placeholder-2.jpg" alt="chook" style="height: 100px; width: 100px;"></img>
