Add finishing touches to second section

--- a/index.html
+++ b/index.html
@@ -44,25 +44,25 @@
             </h2>
             <div id="image-container">
                 <div class="img-with-text">
-                    <img src="./../../odin-links-and-images/images/placeholder-2.jpg" alt="chook" style="height: 100px; width: 100px;"></img>
+                    <img class="chook-img" src="./../../odin-links-and-images/images/placeholder-2.jpg" alt="chook"></img>
                     <p>
                         cute chook
                     </p>
                 </div>
                 <div class="img-with-text">
-                    <img src="./../../odin-links-and-images/images/placeholder-2.jpg" alt="chook" style="height: 100px; width: 100px;"></img>
+                    <img class="chook-img" src="./../../odin-links-and-images/images/placeholder-2.jpg" alt="chook"></img>
                     <p>
                         cute chook
                     </p>
                 </div>
                 <div class="img-with-text">
-                    <img src="./../../odin-links-and-images/images/placeholder-2.jpg" alt="chook" style="height: 100px; width: 100px;"></img>
+                    <img class="chook-img" src="./../../odin-links-and-images/images/placeholder-2.jpg" alt="chook"></img>
                     <p>
                         cute chook
                     </p>
                 </div>
                 <div class="img-with-text">
-                    <img src="./../../odin-links-and-images/images/placeholder-2.jpg" alt="chook" style="height: 100px; width: 100px;"></img>
+                    <img class="chook-img" src="./../../odin-links-and-images/images/placeholder-2.jpg" alt="chook"></img>
                     <p>
                         cute chook
                     </p>
