Add styliing and id to quote section

--- a/index.html
+++ b/index.html
@@ -71,12 +71,14 @@
             </div>
         </div>
         <div id="third-section" style="border: 2px solid;">
-            <blockquote>
-                "This is just a random quote"
-                <p>
-                    -Me
-                </p>
-            </blockquote>
+           <div id="quote-container"> 
+                <blockquote>
+                    "This is just a random quote"
+                     <p id="author">
+                        -Me
+                    </p>
+                </blockquote>
+            </div>
         </div>
         <div id="cta" style="border: 2px solid;">
             <div id="cta-container">
