Add background color and font size to section 3

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div id="third-section" style="border: 2px solid;">
            <div id="quote-container"> 
                 <blockquote>
-                    "This is just a random quote"
+                    <em>"This is just a random quote"</em>
                      <p id="author">
                         -Me
                     </p>
