remove border styling from sections

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <nav style="border: 2px solid;">
+        <nav>
             <ul id="nav-container">
                 <li id="nav-logo">
                     Logo Here
@@ -28,7 +28,7 @@
         </nav>
     </header>
     <main>
-        <div style="border: 2px solid;" id="first-section">
+        <div id="first-section">
             <p>
                 <span id="hero-main-text">WEBSITE IS AWESOME</span><br>
                 <span id="hero-body-text">ipsum dolor sit amet, consectetur adipiscing elit.
@@ -38,7 +38,7 @@
             </p>
             <img id="main-image" src="./../../odin-links-and-images/images/placeholder-1.jpg" alt="person at laptop">
         </div>
-        <div style="border: 2px solid;" id="second-section">
+        <div id="second-section">
             <h2 id="second-section-header">
                 Some Random Text
             </h2>
@@ -70,7 +70,7 @@
                 
             </div>
         </div>
-        <div id="third-section" style="border: 2px solid;">
+        <div id="third-section">
            <div id="quote-container"> 
                 <blockquote>
                     <em>"This is just a random quote"</em>
