Add cta section

--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
         <div id="cta" style="border: 2px solid;">
             <div id="cta-container">
                 <p>
-                    CALL TO ACTION<br>
+                    <strong>CALL TO ACTION</strong><br>
                     insert some words
                 </p>
-                <input type="button">
+                <button id="cta-button" type="button"><strong>Sign Up</strong></button>
             </div>
         </div>
         <footer style="border: 2px solid;">
