--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </blockquote>
             </div>
         </div>
-        <div id="cta" style="border: 2px solid;">
+        <div id="cta">
             <div id="cta-container">
                 <p>
                     <strong>CALL TO ACTION</strong><br>
